# qzr-sheet

./: .claudeignore  .codecompanion-commands.json  .codecompanion.lua  .gitignore  .mcp.json  .nvim.lua  CHANGELOG.md  CLAUDE.md  CLEANUP_ROADMAP.md  LICENSE  NOTICE  README.md  ROADMAP.md  _redirects  commitlint.config.js  dprint.json  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  prompt.txt  pwa-assets.config.ts  typos.toml  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: release.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-api.yml  deploy-web.yml  deploy.yml  release-scoresheet.yml  release.yml
.mcphub/: servers.json
apps/scoresheet/: CHANGELOG.md  package.json  pwa-assets.config.ts  tsconfig.node.json  vite.config.ts
apps/web/: CHANGELOG.md  env.d.ts  index.html  package.json  tsconfig.node.json  vite.config.ts
docs/: Quiz Meet Rule Book.txt  architecture.md  auth-proposal.md  auth.md  data-model.md  example-winkler-2026.md  issue-conventions.md  ods-format.md  roles-and-access.md  rules.md  scheduling.md  scoring-rules-explained.md  scoring-rules.md
public/: _redirects  index.html
scripts/: bump-version.mjs  postbuild-web.mjs
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/__tests__/: App.spec.ts
src/assets/: colors.css
src/components/: Scoresheet.vue  (+1 more)
tools/: check-contract-versions.sh  tag-if-missing.sh
(+160 files in other folders)
